# punjabi

./: .gitignore  README.md  pyproject.toml  setup.py
data/: punjabi_words.csv
punjabi/: encoding_utils.py  gurmukhi_utils.py  stemmer.py  transliterations.py
punjabi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
