[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "punjabi"
version = "0.0.1"
authors = [
  { name="hgcd", email="harkiratg@cosmodigital.com" },
]
description = "Punjabi programming utilities for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hgcd/punjabi"